--- a/src/app/content/fan/fan.component.html
+++ b/src/app/content/fan/fan.component.html
@@ -1,1 +1,14 @@
-<p>fan works!</p>
+<div style="padding: 2rem">
+  <p>
+    Fan Status: @if (fan.fanOn == 1) { On } @else if (fan.fanOn == 0) { Off }
+    @else { Crunching together latest data... }
+  </p>
+  @if (fan.fanOn == 1) {
+  <img src="../../../assets/fan.png" class="fan rotate" />
+  } @else {
+  <img src="../../../assets/fan.png" class="fan" />
+  }
+  <div>
+    <mat-slide-toggle (change)="(setFan)" [checked]="isOn"></mat-slide-toggle>
+  </div>
+</div>
