--- a/src/app/content/fan/fan.component.scss
+++ b/src/app/content/fan/fan.component.scss
@@ -3,12 +3,30 @@
   overflow: hidden;
 }
 
-.fan.rotate {
-  animation: rotate 3s 0.3s ease-in, rotate 2s 3.3s infinite linear;
+.fan.still {
+  animation: none;
+}
+
+.fan.start {
+  animation: rotate2 2s 1 cubic-bezier(0.5, 0, 0.9, 0.8);
+}
+
+.fan.rotating {
+  animation: rotate 2s infinite linear;
+}
+
+.fan.stop {
+  animation: rotate2 2s 1 cubic-bezier(0.1, 0.2, 0.5, 1);
 }
 
 @keyframes rotate {
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate2 {
+  to {
+    transform: rotate(180deg);
   }
 }
