--- a/src/app/content/fan/fan.component.scss
+++ b/src/app/content/fan/fan.component.scss
@@ -8,15 +8,15 @@
 }
 
 .fan.start {
-  animation: rotate2 2s 1 cubic-bezier(0.5, 0, 0.9, 0.8);
+  animation: rotate2 2000ms 1 cubic-bezier(0.5, 0, 0.9, 0.8);
 }
 
 .fan.rotating {
-  animation: rotate 2s infinite linear;
+  animation: rotate 2000ms infinite linear;
 }
 
 .fan.stop {
-  animation: rotate2 2s 1 cubic-bezier(0.1, 0.2, 0.5, 1);
+  animation: rotate2 2000ms 1 cubic-bezier(0.1, 0.2, 0.5, 1);
 }
 
 @keyframes rotate {
