--- a/src/app/content/data/data.component.html
+++ b/src/app/content/data/data.component.html
@@ -1,10 +1,91 @@
 <div style="padding: 2rem">
-  <mat-slide-toggle
-    [checked]="sendMode"
-    (change)="setSendMode($event)"
-  ></mat-slide-toggle>
-  <mat-slide-toggle
-    [checked]="on"
-    (change)="setOnOff($event)"
-  ></mat-slide-toggle>
+  <mat-tab-group dynamicHeight>
+    <mat-tab label="Overview">
+      <div style="padding: 2rem">
+        <ngx-charts-line-chart
+          [view]="[1525, 400]"
+          [legend]="true"
+          [showXAxisLabel]="true"
+          [showYAxisLabel]="true"
+          [xAxis]="true"
+          [yAxis]="true"
+          [xAxisLabel]="'Seconds'"
+          [yAxisLabel]="'°C and %'"
+          [yScaleMin]="-20"
+          [yScaleMax]="100"
+          [timeline]="true"
+          [results]="lineChartData"
+          (select)="onSelect($event)"
+          (activate)="onActivate($event)"
+          (deactivate)="onDeactivate($event)"
+        >
+        </ngx-charts-line-chart>
+
+        <ngx-charts-bar-vertical
+          [view]="[1525, 300]"
+          [legend]="true"
+          [showXAxisLabel]="true"
+          [showYAxisLabel]="true"
+          [xAxis]="true"
+          [yAxis]="true"
+          [xAxisLabel]="'Seconds'"
+          [yAxisLabel]="'°C and %'"
+          [results]="barChartData"
+          (select)="onSelect($event)"
+          (activate)="onActivate($event)"
+          (deactivate)="onDeactivate($event)"
+        >
+        </ngx-charts-bar-vertical>
+      </div>
+    </mat-tab>
+    <mat-tab label="Temperature">
+      <div style="padding: 2rem">
+        <ngx-charts-line-chart
+          [view]="[1525, 400]"
+          [legend]="true"
+          [showXAxisLabel]="true"
+          [showYAxisLabel]="true"
+          [xAxis]="true"
+          [yAxis]="true"
+          [xAxisLabel]="'Seconds'"
+          [yAxisLabel]="'°C and %'"
+          [yScaleMin]="-20"
+          [yScaleMax]="50"
+          [timeline]="true"
+          [results]="tempLineChartData"
+          (select)="onSelect($event)"
+          (activate)="onActivate($event)"
+          (deactivate)="onDeactivate($event)"
+        >
+        </ngx-charts-line-chart>
+      </div>
+    </mat-tab>
+    <mat-tab label="Humidity">
+      <div style="padding: 2rem">
+        <ngx-charts-line-chart
+          [view]="[1525, 400]"
+          [legend]="true"
+          [showXAxisLabel]="true"
+          [showYAxisLabel]="true"
+          [xAxis]="true"
+          [yAxis]="true"
+          [xAxisLabel]="'Seconds'"
+          [yAxisLabel]="'°C and %'"
+          [yScaleMin]="0"
+          [yScaleMax]="100"
+          [timeline]="true"
+          [results]="humiLineChartData"
+          (select)="onSelect($event)"
+          (activate)="onActivate($event)"
+          (deactivate)="onDeactivate($event)"
+        >
+        </ngx-charts-line-chart>
+      </div>
+    </mat-tab>
+    <mat-tab label="Settings">
+      <div style="padding: 2rem">
+        <h1>Turn off</h1>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 </div>
